crates/math-core/tests/snapshots/wiki_test__wiki209.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\varXi \\varPi \\varSigma \\varUpsilon \\varOmega}"
---
<math>
    <mrow><mspace/><mi>𝜩𝜫𝜮𝜰𝜴</mi></mrow>
</math>
