crates/math-core/tests/snapshots/wiki_test__wiki210.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\mathrm{ABCDEFGHI} \\\\ \\mathrm{JKLMNOPQR} \\\\ \\mathrm{STUVWXYZ} \\\\ \\mathrm{abcdefghijklm} \\\\ \\mathrm{nopqrstuvwxyz} \\\\ \\mathrm{0123456789}"
---
<math>
    <mrow><mspace/><mi>ABCDEFGHI</mi></mrow>
    <mrow></mrow>
    <mrow><mspace/><mi>JKLMNOPQR</mi></mrow>
    <mrow></mrow>
    <mrow><mspace/><mi>STUVWXYZ</mi></mrow>
    <mrow></mrow>
    <mrow><mspace/><mi>abcdefghijklm</mi></mrow>
    <mrow></mrow>
    <mrow><mspace/><mi>nopqrstuvwxyz</mi></mrow>
    <mrow></mrow>
    <mn>0123456789</mn>
</math>
