crates/math-core/tests/snapshots/wiki_test__wiki212.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "|\\bar{z}| = |z|, |(\\bar{z})^n| = |z|^n, \\arg(z^n) = n \\arg(z)"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mover accent="true">
        <mi>z</mi>
        <mo stretchy="false">_</mo>
    </mover>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mo>=</mo>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mi>z</mi>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mo>,</mo>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mo stretchy="false">(</mo>
    <mover accent="true">
        <mi>z</mi>
        <mo stretchy="false">_</mo>
    </mover>
    <msup>
        <mo stretchy="false">)</mo>
        <mi>n</mi>
    </msup>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mo>=</mo>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mi>z</mi>
    <msup>
        <mo stretchy="false" lspace="0" rspace="0">|</mo>
        <mi>n</mi>
    </msup>
    <mo>,</mo>
    <mo lspace="0" rspace="0">arg</mo>
    <mo stretchy="false">(</mo>
    <msup>
        <mi>z</mi>
        <mi>n</mi>
    </msup>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <mi>n</mi>
    <mo lspace="0.1667em" rspace="0">arg</mo>
    <mo stretchy="false">(</mo>
    <mi>z</mi>
    <mo stretchy="false">)</mo>
</math>
