crates/math-core/tests/snapshots/wiki_test__wiki213.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\mathsf{\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi}"
---
<math>
    <mrow><mspace/><mi>ΙΚΛΜΝΞΟΠ</mi></mrow>
</math>
