crates/math-core/tests/snapshots/wiki_test__wiki214.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "f(x) = \\begin{cases} 1 & -1 \\le x < 0 \\\\ \\frac{1}{2} & x = 0 \\\\ 1 - x^2 & \\text{otherwise} \\end{cases}"
---
<math>
    <mi>f</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <mrow>
        <mo>{</mo>
        <mtable>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>1</mn>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mo>−</mo>
                    <mn>1</mn>
                    <mo>≤</mo>
                    <mi>x</mi>
                    <mo>&lt;</mo>
                    <mn>0</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mfrac>
                        <mn>1</mn>
                        <mn>2</mn>
                    </mfrac>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mi>x</mi>
                    <mo>=</mo>
                    <mn>0</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>1</mn>
                    <mo>−</mo>
                    <msup>
                        <mi>x</mi>
                        <mn>2</mn>
                    </msup>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mtext>otherwise</mtext>
                </mtd>
            </mtr>
        </mtable>
        <mo></mo>
    </mrow>
</math>
